--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,9 @@
 spring:
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/wx?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+        url: jdbc:mysql://nas.ymxlass.com:53306/wx?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
         username: root
-        password: 123456
+        password: MMM110406
 
 springfox:
     documentation:
